# axum-sqlx-postgresql

./: .env.example  Cargo.toml  Dockerfile  README.md
migrations/: 20250511181357_authors.down.sql  20250511181357_authors.up.sql
src/: db.rs  main.rs  router.rs
src/authors/: dto.rs  entity.rs  mod.rs  service.rs
